<init>hello world!

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,12 +6,14 @@ const year = new Date().getFullYear();
 	<div>
 		Copyright &copy; {year}
 		<span aria-label="rocket emoji">🚀</span>
-		Astro Cactus
+		<a href="https://github.com/chrismwilliams/astro-theme-cactus"
+			>Astro Cactus</a
+		>
 	</div>
 	<nav aria-label="More on this site">
-		<a href="/">Home</a>
-		<a href="/about">About</a>
-		<a href="/posts">Blog</a>
+		<a href="/">首页</a>
+		<a href="/about">关于</a>
+		<a href="/posts">博客</a>
 	</nav>
 </footer>
 
