--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -20,14 +20,14 @@ const paginationProps = {
 		prevUrl: {
 			url: prev.url,
 			text: `← ${prev.frontmatter.title}`,
-			srLabel: " Previous Article:",
+			srLabel: "旧的博文:",
 		},
 	}),
 	...(next && {
 		nextUrl: {
 			url: next.url,
 			text: `${next.frontmatter.title} →`,
-			srLabel: "Next Article:",
+			srLabel: "新的博文:",
 		},
 	}),
 };
@@ -87,8 +87,8 @@ const paginationProps = {
 		<aside
 			class="invisible hidden text-right sm:sticky sm:top-20 sm:block sm:visible"
 		>
-			<h2 class="font-semibold">Table of Contents</h2>
-			<ul class="mt-4 text-xs space-y-2">
+			<h2 class="font-semibold">目录</h2>
+			<ul class="mt-4 space-y-2 text-xs">
 				{
 					headings.map(({ slug, text }) => (
 						<li class="line-clamp-2 hover:text-accent">
