--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -28,20 +28,20 @@ const { page } = Astro.props as Props;
 const { tag } = Astro.params;
 
 const meta = {
-	title: `Tag: ${tag}`,
-	description: `View all posts tagged with ${tag}`,
+	title: `标签: ${tag}`,
+	description: `查看 ${tag} 标签下单所有博文`,
 };
 ---
 
 <PageLayout meta={meta}>
 	<h1 class="flex items-center mb-6 title">
-		Tag: {tag}
+		标签: {tag}
 	</h1>
 	<section aria-label="Blog post list">
-		<ul class="text-left space-y-8">
+		<ul class="space-y-8 text-left">
 			{
 				page.data.map((p) => (
-					<li class="flex flex-wrap items-center gap-x-2 [&_q]:w-full">
+					<li class="[&_q]:w-full flex flex-wrap items-center gap-x-2">
 						<BlogPostPreview post={p} as="h2" withDesc />
 					</li>
 				))
