--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -7,13 +7,13 @@ const allPosts = await Astro.glob<Post>("../posts/*.mdx");
 const allTags = getAllTagsWithCount(allPosts);
 
 const meta = {
-	title: "All Tags",
-	description: "All Tags from my blogs",
+	title: "全部标签",
+	description: "个人博客中的所有标签",
 };
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="mb-6 title">Tags</h1>
+	<h1 class="mb-6 title">标签</h1>
 	<ul class="space-y-4">
 		{
 			Object.keys(allTags).map((tag) => (
@@ -25,9 +25,7 @@ const meta = {
 					>
 						&#35;{tag}
 					</a>
-					<span class="inline-block">
-						- {allTags[tag]} Post{allTags[tag] > 1 && "s"}
-					</span>
+					<span class="inline-block">- {allTags[tag]}篇</span>
 				</li>
 			))
 		}
