--- a/src/components/Paginator.astro
+++ b/src/components/Paginator.astro
@@ -15,13 +15,13 @@ const { prevUrl, nextUrl } = Astro.props;
 			{prevUrl && (
 				<a class="py-2 mr-auto sm:hover:text-accent" href={prevUrl.url} rel="prefetch">
 					{prevUrl.srLabel && <span class="sr-only">{prevUrl.srLabel}</span>}
-					{prevUrl.text ? prevUrl.text : "Previous"}
+					{prevUrl.text ? prevUrl.text : "上一个"}
 				</a>
 			)}
 			{nextUrl && (
 				<a class="py-2 ml-auto sm:hover:text-accent" href={nextUrl.url} rel="prefetch">
 					{nextUrl.srLabel && <span class="sr-only">{nextUrl.srLabel}</span>}
-					{nextUrl.text ? nextUrl.text : "Next"}
+					{nextUrl.text ? nextUrl.text : "下一个"}
 				</a>
 			)}
 		</nav>
