--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -3,7 +3,7 @@ const year = new Date().getFullYear();
 ---
 
 <footer
-	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pt-20 pb-4 text-center align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
+	class="flex flex-col items-center justify-center w-full pt-20 pb-4 mt-auto text-center text-gray-500 align-top gap-y-2 sm:flex-row sm:justify-between sm:text-xs"
 >
 	<div class="mr-0 sm:mr-4">
 		Copyright &copy; {year}
@@ -14,13 +14,13 @@ const year = new Date().getFullYear();
 		aria-label="More on this site"
 		class="flex gap-x-2 sm:gap-x-0 sm:divide-x sm:divide-gray-500"
 	>
-		<a href="/" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline">Home</a
+		<a href="/" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline">首页</a
 		>
 		<a href="/about" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
-			>About</a
+			>关于</a
 		>
 		<a href="/posts" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
-			>Blog</a
+			>博客</a
 		>
 	</nav>
 </footer>
