--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -5,15 +5,15 @@ const url = new URL(Astro.request.url);
 
 const menuLinks = [
 	{
-		title: "Home",
+		title: "首页",
 		path: "/",
 	},
 	{
-		title: "About",
+		title: "关于",
 		path: "/about",
 	},
 	{
-		title: "Blog",
+		title: "博客",
 		path: "/posts",
 	},
 ];
@@ -35,34 +35,14 @@ const menuLinks = [
 	});
 </script>
 
-<header id="main-header" class="group relative mb-28 flex items-center sm:pl-[4.5rem]">
+<header id="main-header" class="relative flex items-center group mb-28">
 	<div class="flex sm:flex-col">
 		<a
 			href="/"
 			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
 			aria-current={url.pathname === "/" ? "page" : false}
 		>
-			<svg
-				class="mr-3 h-10 w-6 sm:absolute sm:left-[-4.5rem] sm:mr-0 sm:h-20 sm:w-12"
-				aria-hidden="true"
-				focusable="false"
-				fill="none"
-				xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 272 480"
-			>
-				<title>Logo</title>
-				<path
-					d="M181.334 93.333v-40L226.667 80v40l-45.333-26.667ZM136.001 53.333 90.667 26.667v426.666L136.001 480V53.333Z"
-					fill="#B04304"></path>
-				<path
-					d="m136.001 119.944 45.333-26.667 45.333 26.667-45.333 26.667-45.333-26.667ZM90.667 26.667 136.001 0l45.333 26.667-45.333 26.666-45.334-26.666ZM181.334 53.277l45.333-26.666L272 53.277l-45.333 26.667-45.333-26.667ZM0 213.277l45.333-26.667 45.334 26.667-45.334 26.667L0 213.277ZM136 239.944l-45.333-26.667v53.333L136 239.944Z"
-					fill="#FF5D01"></path>
-				<path
-					d="m136 53.333 45.333-26.666v120L226.667 120V80L272 53.333V160l-90.667 53.333v240L136 480V306.667L45.334 360V240l45.333-26.667v53.334L136 240V53.333Z"
-					fill="#53C68C"></path>
-				<path d="M45.334 240 0 213.334v120L45.334 360V240Z" fill="#B04304"></path>
-			</svg>
-			<span class="text-xl font-bold sm:text-2xl">Astro Cactus</span>
+			<span class="text-xl font-bold sm:text-2xl">个人博客</span>
 		</a>
 		<nav
 			id="navigation-menu"
@@ -73,7 +53,7 @@ const menuLinks = [
 				menuLinks.map((link) => (
 					<a
 						href={link.path}
-						class="py-4 px-4 sm:py-0 sm:hover:underline"
+						class="px-4 py-4 sm:py-0 sm:hover:underline"
 						aria-current={url.pathname === link.path ? "page" : false}
 						rel="prefetch"
 					>
@@ -86,7 +66,7 @@ const menuLinks = [
 	<ThemeToggle />
 	<button
 		id="toggle-navigation-menu"
-		class="group relative ml-8 h-7 w-7 sm:invisible sm:hidden"
+		class="relative ml-8 group h-7 w-7 sm:invisible sm:hidden"
 		type="button"
 		aria-label="Open main menu"
 		aria-expanded="false"
@@ -94,7 +74,7 @@ const menuLinks = [
 	>
 		<svg
 			id="line-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 transition-all group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
+			class="absolute w-full h-full transition-all -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
 			aria-hidden="true"
 			focusable="false"
 			xmlns="http://www.w3.org/2000/svg"
@@ -108,7 +88,7 @@ const menuLinks = [
 		</svg>
 		<svg
 			id="cross-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 scale-0 text-accent opacity-0 transition-all group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
+			class="absolute w-full h-full transition-all scale-0 -translate-x-1/2 -translate-y-1/2 opacity-0 top-1/2 left-1/2 text-accent group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
 			class="text-accent"
 			aria-hidden="true"
 			focusable="false"
