--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -29,12 +29,12 @@ const { headings } = await post.render();
 			</div>
 		</article>
 		<aside class="hidden text-right sm:sticky sm:top-20 sm:block">
-			<h2 class="font-semibold">Table of Contents</h2>
+			<h2 class="font-semibold">章节</h2>
 			<ul class="mt-4 space-y-2 text-xs">
 				{
 					headings.map(({ slug, text }) => (
 						<li class="line-clamp-2 hover:text-accent">
-							<a href={`#${slug}`} aria-label={`Scroll to section: ${text}`}>
+							<a href={`#${slug}`} aria-label={`滚动到: ${text}`}>
 								<span>&#35;</span> {text}
 							</a>
 						</li>
