--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -5,12 +5,11 @@ import "../styles/global.css";
 
 type Props = SiteMeta;
 
-const { title, description, ogImage, articleDate } = Astro.props;
+const { title, description, articleDate } = Astro.props;
 
 const titleSeparator = "•";
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
 ---
 
 <meta charset="utf-8" />
@@ -31,32 +30,6 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 
 <!-- Theme Colour -->
 <meta name="theme-color" content={siteConfig.themeColorLight} />
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content={articleDate ? "article" : "website"} />
-<meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:url" content={canonicalURL} />
-<meta property="og:site_name" content={siteConfig.title} />
-<meta property="og:locale" content={siteConfig.ogLocale} />
-<meta property="og:image" content={socialImageURL} />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-{
-	articleDate && (
-		<>
-			<meta property="article:author" content={siteConfig.author} />
-			<meta property="article:published_time" content={articleDate} />
-		</>
-	)
-}
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={canonicalURL} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={socialImageURL} />
 
 <!-- RSS auto-discovery -->
 <link rel="alternate" type="application/rss+xml" title={siteConfig.title} href="/rss.xml" />
