--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import type { IElement } from "@/data/shared";
-import { getFormattedDate } from "@/utils";
+import { getFormattedDate, getTitle, getDescription } from "@/utils";
 
 interface Props extends IElement {
 	post: CollectionEntry<"post">;
@@ -9,15 +9,19 @@ interface Props extends IElement {
 }
 
 const { post, as: Element = "div", withDesc = false } = Astro.props;
-const date = new Date(post.data.publishDate);
+const date = post.data.publishDate ?? new Date();
 const datetime = date.toISOString();
 const postDate = getFormattedDate(date);
 ---
 
 <time datetime={datetime} class="min-w-[120px] text-gray-500">{postDate}</time>
 <Element>
-	<a href={`/posts/${post.slug}/`} class="cactus-link" rel="prefetch">
-		{post.data.title}
+	<a href={`/${post.collection}/${post.slug}/`} class="cactus-link" rel="prefetch">
+		{post.data.title ?? getTitle(post.body)}
 	</a>
 </Element>
-{withDesc && <q class="line-clamp-3 block italic">{post.data.description}</q>}
+{
+	withDesc && (
+		<q class="line-clamp-3 block italic">{post.data.description ?? getDescription(post.body)}</q>
+	)
+}
