--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,17 +5,22 @@ import PostPreview from "@/components/blog/PostPreview";
 import { sortMDByDate } from "@/utils";
 
 const MAX_POSTS = 10;
-const allPosts = await getCollection("post");
-const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+const allPosts = Object.entries({
+	post: await getCollection("post"),
+	post2: await getCollection("post2"),
+})
+	.map(([collection, posts]) => posts.map((post) => ({ ...post, collection })))
+	.flat();
+const allPostsByDate = sortMDByDate(allPosts!).slice(0, MAX_POSTS);
 ---
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="mb-6 title">Hello World!</h1>
+		<h1 class="title mb-6">Hello World!</h1>
 		<p class="mb-4">Hello World! Hello World! Hello World!</p>
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
-		<h2 class="mb-4 text-xl title">博文列表</h2>
+		<h2 class="title mb-4 text-xl">博文列表</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			{
 				allPostsByDate.map((p) => (
