--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const allPosts = Object.entries({
 const allPostsByDate = sortMDByDate(allPosts!).slice(0, MAX_POSTS);
 ---
 
-<PageLayout meta={{ title: "Home" }}>
+<PageLayout meta={{ title: "首页" }}>
 	<section>
 		<h1 class="title mb-6">Hello World!</h1>
 		<p class="mb-4">Hello World! Hello World! Hello World!</p>
